k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: clouddeploy
  labels:
    app.kubernetes.io/name: clouddeploy-backend
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      name: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: clouddeploy-backend
