k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: clouddeploy
  labels:
    app.kubernetes.io/name: clouddeploy-frontend
    app.kubernetes.io/component: ui
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: clouddeploy-frontend
